# mscal

./: AUTHORS  ChangeLog.md  Makefile  Makefile-static  Makefile.am  README.md  aboutTYY  alglib_rbf_wrapper.C  alglib_rbf_wrapper.h  configure.ac
CenCalTYY-orig/: query_mod.py
data/: Makefile.am  config  make_data_files.py
src/: Makefile.am  cs248.c  cs248.h  mscal.c  mscal.h
test/: Makefile.am-static  r  use_alglib.c
tyy/: 3tuple  query_cencaltyy.c  query_it.C  query_it.CXX  r
